# codx

./: AGENTS.md  Cargo.toml  LICENSE  README.md
assets/: languages.toml
assets/queries/bash/: highlights.scm
assets/queries/c/: highlights.scm
assets/queries/cpp/: highlights.scm
assets/queries/css/: highlights.scm
assets/themes/: catppuccin.toml  dracula.toml  gruvbox.toml  onedark.toml  solarized.toml  tokyonight.toml
src/: main.rs
src/app/: app.rs  completion.rs  editor.rs  error.rs  input.rs  mod.rs  startup.rs  state.rs  syntax.rs  terminal.rs  tests.rs  tree.rs  ui.rs
src/app/completion/: apply.rs  (+7 more)
src/config/: theme.rs
src/core/: buffer.rs  cursor.rs  document.rs  history.rs  mod.rs  selection.rs
src/editor/: clipboard.rs  command.rs  command_bar.rs  completion.rs  history_actions.rs  mod.rs  movement.rs  search.rs  search_actions.rs  snippet.rs  text_edit.rs
src/file/: bootstrap.rs  explorer.rs  finder.rs  io.rs  mod.rs  recent.rs  watcher.rs  workspace.rs
src/keymap/: dispatch.rs  mod.rs
src/lsp/: capabilities.rs  code_action.rs  completion.rs  diagnostics.rs  format.rs  goto.rs  hover.rs  mod.rs  progress.rs  protocol.rs  rename.rs  signature.rs  transport.rs
src/syntax/: error.rs  fold.rs  highlight.rs  indent.rs  language.rs  layer.rs  markdown_injection.rs  mod.rs  registry.rs
src/ui/: error.rs  event_loop.rs  float.rs  layout.rs  mod.rs  mouse.rs  palette.rs  pane.rs  picker.rs  renderer.rs  session.rs  split.rs  workspace.rs
src/util/: clipboard.rs  encoding.rs  mod.rs  scroll.rs
src/view/: mod.rs  statusline.rs  viewport.rs
(+64 files in other folders)
