[package]
name = "codx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
encoding_rs = "0.8.35"
futures = "0.3.32"
git2 = "0.20.4"
globset = "0.4.18"
ignore = "0.4.25"
lsp-types = "0.97.0"
notify = "8.2.0"
nucleo = "0.5.0"
parking_lot = "0.12.5"
ratatui = "0.30.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.7"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.5.0"
tree-sitter-md = "0.5.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
wasmtime = "43.0.0"

[build-dependencies]
cc = "1.2.57"

[profile.release]
lto = "fat"
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"
